Card Border Color
Change color card by card

--- a/index.html
+++ b/index.html
@@ -15,7 +15,43 @@
 <body>
 	<div class="container">
 		<div class="profile-name">
-			<h1 class="profile-header">Ashique</h1>
+			<h1 class="profile-header">My Profile</h1>
+		</div>
+	</div>
+	<div class="container">
+		<div class="card">
+			<div class="card card-1">
+				<div class="card-img-top">
+					<img class="img-fluid rounded-circle profile-image" src="assets/img/profile-image.jpg" >
+				</div>
+			</div>
+			<div class="card-body text-white bg-primary">
+				<h5 class="card-title text-lg-center">MD.Assaduzzaman Ashique</h5>
+				<p class="card-text text-lg-center">Web developer</p>
+				<p class="card-text text-lg-center">Work at Vint Valley Inc.</p>
+				<p class="card-text text-lg-center">Worked at Chromatic Limited (August 2016-August2017)</p>
+			</div>
+		</div>
+	</div>
+	<div class="container">
+		<div class="card">
+			<div class="card-header bg-success">
+				<h3 class="card-title text-white text-lg-center">Education</h3>
+			</div>
+			<div class="card card-2">
+				<div class="card-body">
+					<h5 class="card-title text-lg-center text-success">B.Sc. in CSE</h5>
+					<p class="card-text text-lg-center text-success">BRAC University</p>
+				</div>
+				<div class="card-body">
+					<h5 class="card-title text-lg-center text-success">HSC (Science)</h5>
+					<p class="card-text text-lg-center text-success">Notre Dame College</p>
+				</div>
+				<div class="card-body">
+					<h5 class="card-title text-lg-center text-success">SSC (Science)</h5>
+					<p class="card-text text-lg-center text-success">Government Laboratory High School</p>
+				</div>
+			</div>
 		</div>
 	</div>
 </body>
